--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,29 @@
   "compilerOptions": {
     "module": "commonjs",
     "declaration": true,
+    "noImplicitAny": false,
     "removeComments": true,
+    "noLib": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "es2017",
+    "target": "es6",
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "incremental": true
+    // "incremental": true,
+    "skipLibCheck": true
+  },
+  "exclude": ["node_modules"],
+  "paths": {
+    "@db-config/*": [
+      "src/config/*"
+    ],
+    "@modules/*":[
+      "src/modules/*"
+    ],
+    "@entities/*": [
+      "src/entity/*"
+    ]
   }
 }
